--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="sales.html">Product Sales</a>
     <a href="stocks.html">Stocks</a>
     <a href="orders.html">Orders</a>
-    <a href="menu.html">Menu</a>
+    <a href="menu.html">Menumu</a>
     <a href="settings.html">Settings</a>
   </div>
 
@@ -22,7 +22,7 @@
     <div class="header">
       <h1>Dashboard</h1>
         <div class="money-display">
-          💰 Balance: RM 5,000.00
+          💰 Balance: RM 6,000.00
         </div>
     </div>
     <div class="content" id="dashboard">
